--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,9 @@
         <param-name>dbPort</param-name>
         <param-value>3306</param-value>
     </context-param>
+    
+    <!-- Pagina di errore -->
+    <error-page>
+        <location>/WEB-INF/error/error.jsp</location>
+    </error-page>
 </web-app>
