--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,7 +48,7 @@
     </context-param>
     
     <!-- Pagina di errore -->
-    <!--<error-page>
+    <error-page>
         <location>/WEB-INF/error/error.jsp</location>
-    </error-page>-->
+    </error-page>
 </web-app>
