--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
     </context-param>
     <context-param>
         <param-name>dbPass</param-name>
-        <param-value></param-value>
+        <param-value/>
     </context-param>
     <context-param>
         <param-name>dbName</param-name>
