riabilitata error page

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,10 +47,10 @@
         <param-value>3306</param-value>
     </context-param>
 
-    <!-- Pagina di errore
+    <!-- Pagina di errore -->
     <error-page>
         <location>/WEB-INF/error/error.jsp</location>
-    </error-page>  -->
+    </error-page>
 
     <!-- Setup HTTPS SSL -->
     <security-constraint>
